test/TestSuite/Syntax/Errors/report_column.tjp
project test "Test" "1.0" 2007-03-25 +2m

task t "Task" {
	start 2007-03-25
}

htmltaskreport "tasks.html" {
# MARK: error 9 report_column
	columns name, start, end, foo, daily
}

